--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -9,13 +9,13 @@
     crossorigin="anonymous">
 
   <link rel="stylesheet" href="/css/style.css">
-  <title>CodeGig</title>
+  <title>Welcome</title>
 </head>
 
 <body>
   <header>
     <h2><a href="/"><i class="fas fa-code"></i>
-        CodeGig</a></h2>
+        Welcome</a></h2>
     <nav>
       <ul>
         <li>
