--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,13 +10,13 @@
 
 
   <link rel="stylesheet" href="/css/style.css">
-  <title>CodeGig</title>
+  <title>Welcome</title>
 </head>
 
 <body>
   <header class="inner">
     <h2><a href="/"><i class="fas fa-code"></i>
-        CodeGig</a></h2>
+        Welcome</a></h2>
     <nav>
       <ul>
         <li>
